feb24/2_nodeAffinity_softRule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerdep
  namespace: ts
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: spring
  template:
    metadata:
      labels: 
        app: spring
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - firt

      containers:
        - name: app1
          image: heartocean/docom:1
          ports: 
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springserv
  namespace: ts
spec:
  type: LoadBalancer
  selector:
    app: spring
  ports:
    - targetPort: 8080
      port: 80
      nodePort: 30000
