feb24/5_healthc_paffinity_soft.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springdep1
  namespace: ts
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring1
  template:
    metadata: 
      labels:
        app: spring1
    spec:
      containers:
        - name: springtomcat
          image: heartocean/docom:1
          ports:
            - name: tomprt
              containerPort: 8080
          livenessProbe:
            exec:
              command: 
                - curl 
                - http://localhost:8080
            initialDelaySeconds: 5
            periodSeconds: 5

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: name
                    operator: In
                    values:
                      - first
                      - third
                      - fourth
---
apiVersion: v1
kind: Service
metadata:
  name: sserv
  namespace: ts
spec:
  type: NodePort
  selector:
    app: spring1
  ports:
    - port: 80
      targetPort: tomprt
      nodePort: 30002
